--- a/package.json
+++ b/package.json
@@ -2,8 +2,21 @@
   "name": "typed-test-id",
   "version": "1.0.0",
   "description": "This package links test ids used in frontend and selectors used in testing through types. Unlocks editor autocomplete and change detection. Powered by template literal types.",
-  "main": "index.js",
   "license": "MIT",
+  "repository": "https://github.com/rainy-me/typed-test-id",
+  "types": "dist/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "scripts": {
+    "build": "yarn build:types && yarn build:esm && yarn build:cjs",
+    "build:types": "tsc --project tsconfig.types.json",
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build:cjs": "tsc --project tsconfig.cjs.json",
+    "test": "jest"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
